# datascience-publicpolicy-2026

./: .gitignore  pyproject.toml
data/examples/week_5/: imf_weo_countries.parquet  kmueller_macro.parquet  world_happiness.parquet
notebooks/hw/hw_2/: qicheng-lee_hw_2.ipynb
notebooks/week_5/: 1-reshaping_data.ipynb
notebooks/week_6/: 1-regression.ipynb
notebooks/week_6/review/: review-github.ipynb  review-libraries-functions.ipynb  review-variables.ipynb
notebooks/week_7/: 1-text-data.ipynb
references/grading/: hw2_grading.yaml
src/data/: data_import.py  data_manipulate.py  data_merge.py
src/grading/: grader_hw_2.py
src/model/: regression.py
