[project]
name = "datascience-publicpolicy-2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "lxml>=6.0.2",
    "matplotlib>=3.10.9",
    "pandas>=3.0.2",
    "pyarrow>=24.0.0",
    "pypdf>=6.12.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "wordcloud>=1.9.6",
]
